fix code block css to break the long secret into multiple lines

--- a/WebAPI/Content/Site.css
+++ b/WebAPI/Content/Site.css
@@ -15,3 +15,8 @@ select,
 textarea {
     max-width: 280px;
 }
+
+code {
+    white-space: normal;
+    word-break: break-all;
+}
